Use litefabric: URLs to avoid case sensitivity issues on Windows
Currently, loader prints errors trying to access a Path for that url
in a development environment.